--- a/superset/assets/src/components/ObjectTags.css
+++ b/superset/assets/src/components/ObjectTags.css
@@ -45,7 +45,7 @@
   display: inline-block;
   padding: 1px 0 0 1px;
   margin: 0 10px;
-  border: 1px solid #F5F5F5;
+  border: 1px solid #f5f5f5;
   border-radius: 1px;
 
   /* shared font styles */
@@ -64,7 +64,7 @@
 }
 
 .react-tags.is-focused {
-  border-color: #F0F0F0;
+  border-color: #f0f0f0;
 }
 
 .react-tags__selected {
@@ -76,9 +76,9 @@
   box-sizing: border-box;
   margin: 0;
   padding: 6px 8px;
-  border: 1px solid #F5F5F5;
+  border: 1px solid #f5f5f5;
   border-radius: 2px;
-  background: #F1F1F1;
+  background: #f1f1f1;
 
   /* match the font styles */
   font-size: inherit;
@@ -87,13 +87,13 @@
 
 .react-tags__selected-tag:after {
   content: '\2715';
-  color: #AAA;
+  color: #aaa;
   margin-left: 8px;
 }
 
 .react-tags__selected-tag:hover,
 .react-tags__selected-tag:focus {
-  border-color: #B1B1B1;
+  border-color: #b1b1b1;
 }
 
 .react-tags__search {
@@ -108,12 +108,10 @@
 }
 
 @media screen and (min-width: 30em) {
-
   .react-tags__search {
     /* this will become the offsetParent for suggestions */
     position: relative;
   }
-
 }
 
 .react-tags__search input {
@@ -145,11 +143,9 @@
 }
 
 @media screen and (min-width: 30em) {
-
   .react-tags__suggestions {
     width: 240px;
   }
-
 }
 
 .react-tags__suggestions ul {
@@ -157,7 +153,7 @@
   padding: 0;
   list-style: none;
   background: white;
-  border: 1px solid #D1D1D1;
+  border: 1px solid #d1d1d1;
   border-radius: 2px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
@@ -194,7 +190,7 @@
 
 .react-tags a.deco-none {
   color: inherit;
-  text-decoration:none;
+  text-decoration: none;
 }
 
 .react-tags-rw span.label {
@@ -203,7 +199,7 @@
 
 .react-tags-rw a.deco-none {
   color: inherit;
-  text-decoration:none;
+  text-decoration: none;
 }
 
 .react-tags span.glyphicon {
